# approxProbTraceAlign2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TransitionGraph.cpp  TransitionGraph.h  main.cpp  nfa_to_dfa_weighted_labelled_automata.cpp  nfa_to_dfa_weighted_labelled_automata.h
include/basics/: AlterTrace.h  trace.h
include/graphs/: TransitionGraph.h  adjacency_graph.h
include/graphs/algorithms/: nfa_to_dfa_weighted_labelled_automata.h
include/hashing/: hash_combine.h  pair_hash.h  vector_hash.h
source/basics/: AlterTrace.cpp  trace.cpp
source/graphs/: TransitionGraph.cpp  adjacency_graph.cpp
source/graphs/algorithms/: nfa_to_dfa_weighted_labelled_automata.cpp
source/hashing/: hash_combine.cpp
